--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imba project</title>
-    <link href="./normalize.css" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Imba boilerplate</title>
+
+	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/css/app.css">
+	<link rel="stylesheet" href="/css/material-design-iconic-font.css">
 </head>
 <body>
-    <meta charset="utf-8">
-    <script src="./app.imba.js"></script>
+	<meta charset="utf-8">
+	<script src="./app.imba.js"></script>
 </body>
 </html>
