--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
 	<meta charset="utf-8">
-	<script src="./app.imba.js"></script>
+    <script type="module" src="/static/app-root.js"></script>
 </body>
 </html>
