--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
 <body>
 	<meta charset="utf-8">
     <script type="module" src="/static/app-root.js"></script>
+    <script type="module" src="/static/imports.js"></script>
 </body>
 </html>
