--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html translate="no">
 <head>
 	<meta charset="UTF-8">
 
@@ -7,20 +7,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes">
 	<meta name="msapplication-TileColor" content="#000000">
-	<meta name="msapplication-TileImage" content="/apple-touch-icon-180x180.png">
+	<meta name="msapplication-config" content="/img/icons/browserconfig.xml">
 	<meta name="theme-color" content="#000000">
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+	<link rel="manifest" href="/img/icons/site.webmanifest">
+	<link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#000000">
+	<link rel="shortcut icon" href="/img/icons/favicon.ico">
 
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="/css/material-design-iconic-font.css">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/img/icon/android-chrome-192x192.png">
-	<link rel="icon" type="image/png" sizes="512x512"  href="/img/icon/android-chrome-512x512.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
 </head>
 <body>
 	<meta charset="utf-8">
