--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html translate="no">
+<html lang="en" translate="no">
 <head>
 	<meta charset="UTF-8">
 
@@ -7,16 +7,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="msapplication-TileColor" content="#000000">
-	<meta name="msapplication-config" content="/img/icons/browserconfig.xml">
-	<meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#000000"/>
 
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
-	<link rel="manifest" href="/img/icons/site.webmanifest">
-	<link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#000000">
-	<link rel="shortcut icon" href="/img/icons/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/icon/apple-touch-icon.png">
+	<link rel="manifest" href="/manifest.json">
 
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="/css/material-design-iconic-font.css">
@@ -24,7 +18,8 @@
 </head>
 <body>
 	<meta charset="utf-8">
-    <script type="module" src="/static/app-root.js"></script>
     <script src="sw.js" type="text/javascript"></script>
+    <script type="module" src="/static/app-root.js"></script>
+    <noscript>Javascript is required to run this page!</noscript>
 </body>
 </html>
